-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.21
-
Component/s: C++ Broker
-
Labels:None
The existing code has only a stub implementation which returns null when trying to extract properties from 1.0 messages. This means that the selectors code cannot extract any property values from 1.0 messages.
- blocks
-
QPID-4558 Implement Selector support in C++ broker
-
- Open
-