QPID-4625: Extract amqp 1.0 application-properties from messages - A working implementaion to qpid::amqp::Message::processProperties()   so that qpid::broker::Message::getProperty() will work. * This is used by the selector implementation.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1455579 13f79535-47bb-0310-9956-ffa450edef68